--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "authors": [
         "Warlock"
     ],
-    "origin": "https://github.com/Warlock/AMPTemplates.git",
-    "url": "https://github.com/Warlock/AMPTemplates",
+    "origin": "https://github.com/cmphakr/AMPTemplates.git",
+    "url": "https://github.com/cmphakr/AMPTemplates",
     "imagefile": "",
-    "prefix": "Warlock"
+    "prefix": "cmphakr"
 }
